[tool.poetry]
name = "lekestua"
version = "0.1.0"
description = ""
authors = ["Marius Gjerde <marius@mgjerde.no>"]

[tool.poetry.dependencies]
python = "^3.8"
py-cord = "^2.0.0b4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
